--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     </p>
 
     <h2 align="center">
-        K1TECH - NOTICIAS TECH
+        K1TECH - NOTICÍAS TECH
+    </h2>
+
+    <h2 align="center">
+        Notícias sobre Tecnologia
     </h2>
 
     <hr color="black" size="3"/>
@@ -60,7 +64,7 @@
     <p></p>
 
     <p align="center"> 
-        <strong> Outras Noticias. </strong>
+        <strong> Outras Notícias. </strong>
     </p>
 
             <details> 
@@ -82,7 +86,7 @@
     <p></p>
 
             <p align="center">
-            <strong> Continuação da noticia. </strong> 
+            <strong> Continuação da notícia. </strong> 
             </p>
 
             <p> O problema é que muitas plataformas e novas soluções se apresentam como tendências e depois, acabam por cair no esquecimento – às vezes simplesmente porque geraram expectativas excessivas enquanto ainda estavam em processo de amadurecimento; outras vezes, por serem pouco úteis na prática - ou até mesmo por serem integradas ou também disruptadas durante novos ciclos de evolução tecnológica. </p>
